add device synctime service

--- a/attendance/src/main/webapp/WEB-INF/web.xml
+++ b/attendance/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" 
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  
-			     http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0" metadata-complete="true">
-  <!--<absolute-ordering/>-->
+	     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  
+			                 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0" metadata-complete="true">
+  <absolute-ordering/>
+
+  <!--设置字符集-->
+  <filter>
+    <filter-name>characterEncoding</filter-name>
+    <filter-class>org.beangle.commons.web.filter.CharacterEncodingFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>characterEncoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <listener>
+    <listener-class>org.beangle.spring.web.ContextListener</listener-class>
+  </listener>
+  
+  <servlet>
+    <servlet-name>app.synctime</servlet-name>
+    <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>app.device</servlet-name>
+    <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>app.synctime</servlet-name>
+    <url-pattern>/app/synctime</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.device</servlet-name>
+    <url-pattern>/app/device</url-pattern>
+  </servlet-mapping>
 </web-app>
