first test pass

--- a/attendance/pom.xml
+++ b/attendance/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <bundle.symbolicName>org.openurp.ws.services.teach.attendance</bundle.symbolicName>
     <bundle.namespace>org.openurp.ws.services.teach.attendance</bundle.namespace>
+    <jta.version>1.1</jta.version>
   </properties>
   
   <dependencies>
@@ -25,6 +26,17 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache-core</artifactId>
+      <version>2.6.8</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+      <version>${jta.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
