--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>13-SNAPSHOT</version>
+    <version>13</version>
   </parent>
   <groupId>org.openurp.ws.services.teach</groupId>
   <artifactId>openurp-ws-services-teach-parent</artifactId>
@@ -15,8 +15,9 @@
   <properties>
     <bundle.symbolicName>org.openurp.ws.services.teach.parent</bundle.symbolicName>
     <bundle.namespace>org.openurp.ws.services.teach.parent</bundle.namespace>
-    <beanglecommons.version>4.0.3-SNAPSHOT</beanglecommons.version>
-    <beanglespring.version>4.0.2-SNAPSHOT</beanglespring.version>
+    <beangle.commons.version>4.0.3</beangle.commons.version>
+    <beangle.commons.version>4.0.3</beangle.commons.version>
+    <beangle.spring.version>4.0.1</beangle.spring.version>
   </properties>
 
   <modules>
@@ -27,17 +28,17 @@
     <dependency>
       <groupId>org.beangle.data</groupId>
       <artifactId>beangle-data-jdbc</artifactId>
-      <version>${beanglecommons.version}</version>
+      <version>${beangle.data.version}</version>
     </dependency>
     <dependency>
       <groupId>org.beangle.commons</groupId>
       <artifactId>beangle-commons-web</artifactId>
-      <version>${beanglecommons.version}</version>
+      <version>${beangle.commons.version}</version>
     </dependency>
     <dependency>
       <groupId>org.beangle.spring</groupId>
       <artifactId>beangle-spring-context</artifactId>
-      <version>${beanglespring.version}</version>
+      <version>${beangle.spring.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
