--- a/attendance/src/main/webapp/WEB-INF/web.xml
+++ b/attendance/src/main/webapp/WEB-INF/web.xml
@@ -71,51 +71,51 @@
 
   <servlet-mapping>
     <servlet-name>app.sync</servlet-name>
-    <url-pattern>/app/synctime</url-pattern>
+    <url-pattern>/attendance/app/sync</url-pattern>
   </servlet-mapping>
-
+  
   <servlet-mapping>
     <servlet-name>app.device</servlet-name>
-    <url-pattern>/app/device</url-pattern>
+    <url-pattern>/attendance/app/device</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.signin</servlet-name>
-    <url-pattern>/app/signin</url-pattern>
+    <url-pattern>/attendance/app/signin</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
     <servlet-name>app.activity</servlet-name>
-    <url-pattern>/app/currcourseinfo</url-pattern>
+    <url-pattern>/attendance/app/activity</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.coursetable</servlet-name>
-    <url-pattern>/app/courseinfo</url-pattern>
+    <url-pattern>/attendance/app/coursetable</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.upload</servlet-name>
-    <url-pattern>/app/dataupload</url-pattern>
+    <url-pattern>/attendance/app/upload</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.detail</servlet-name>
-    <url-pattern>/app/signindetail</url-pattern>
+    <url-pattern>/attendance/app/detail</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.rate</servlet-name>
-    <url-pattern>/app/attrate</url-pattern>
+    <url-pattern>/attendance/app/rate</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.notice</servlet-name>
-    <url-pattern>/app/scrollingmsg</url-pattern>
+    <url-pattern>/attendance/app/notice</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>app.importer</servlet-name>
-    <url-pattern>/app/importer</url-pattern>
+    <url-pattern>/attendance/app/importer</url-pattern>
   </servlet-mapping>
 </web-app>
