--- a/attendance/src/main/resources/config.properties
+++ b/attendance/src/main/resources/config.properties
@@ -1,2 +1,2 @@
-courseURL=http://portal.shfc.edu.cn/eams/courseTablePublic.do?method=courseTable&calendar.id=${semesterId}&ids=${roomId}&setting.ignoreTask=1&setting.kind=room&request_locale=zh_CN
+courseURL=http://portal.shfc.edu.cn/eams/courseTablePublic.do?method=courseTable&calendar.id=${semesterId}&ids=${roomId}&setting.ignoreTask=1&setting.kind=room&request_locale=zh_CN&ignoreHead=true
 
