--- a/attendance/pom.xml
+++ b/attendance/pom.xml
@@ -6,37 +6,16 @@
     <artifactId>openurp-ws-services-teach-parent</artifactId>
     <version>0.0.2-SNAPSHOT</version>
   </parent>
-  <artifactId>openurp-ws-services-teach-attendance</artifactId>
-  <packaging>war</packaging>
-  <name>OpenURP Teach Attendance Service</name>
+  <artifactId>openurp-ws-services-teach-attendance-parent</artifactId>
+  <packaging>pom</packaging>
+  <name>OpenURP Teach Attendance Service Parent</name>
   
   <properties>
-    <bundle.symbolicName>org.openurp.ws.services.teach.attendance</bundle.symbolicName>
-    <bundle.namespace>org.openurp.ws.services.teach.attendance</bundle.namespace>
-    <jta.version>1.1</jta.version>
+    <bundle.symbolicName>org.openurp.ws.services.teach.attendance.parent</bundle.symbolicName>
+    <bundle.namespace>org.openurp.ws.services.teach.attendance.parent</bundle.namespace>
   </properties>
   
-  <dependencies>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache-core</artifactId>
-      <version>2.6.8</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>jta</artifactId>
-      <version>${jta.version}</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>app</module>
+  </modules>
 </project>
