--- a/attendance/app/src/main/webapp/WEB-INF/web.xml
+++ b/attendance/app/src/main/webapp/WEB-INF/web.xml
@@ -21,101 +21,101 @@
   </listener>
   
   <servlet>
-    <servlet-name>app.sync</servlet-name>
+    <servlet-name>app.teach.attendance.sync</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet>
-    <servlet-name>app.device</servlet-name>
+    <servlet-name>app.teach.attendance.device</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet>
-    <servlet-name>app.signin</servlet-name>
+    <servlet-name>app.teach.attendance.signin</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
   
   <servlet>
-    <servlet-name>app.upload</servlet-name>
+    <servlet-name>app.teach.attendance.upload</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
   
   <servlet>
-    <servlet-name>app.coursetable</servlet-name>
+    <servlet-name>app.teach.attendance.coursetable</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>app.activity</servlet-name>
-    <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
-  </servlet>
-
-  <servlet>
-    <servlet-name>app.detail</servlet-name>
+    <servlet-name>app.teach.attendance.activity</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet>
-    <servlet-name>app.rate</servlet-name>
+    <servlet-name>app.teach.attendance.detail</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet>
-    <servlet-name>app.notice</servlet-name>
+    <servlet-name>app.teach.attendance.rate</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet>
-    <servlet-name>app.importer</servlet-name>
+    <servlet-name>app.teach.attendance.notice</servlet-name>
+    <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>app.teach.attendance.importer</servlet-name>
     <servlet-class>org.beangle.commons.web.servlet.DelegatingServletProxy</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>app.sync</servlet-name>
-    <url-pattern>/attendance/app/sync</url-pattern>
+    <servlet-name>app.teach.attendance.sync</servlet-name>
+    <url-pattern>/teach/attendance/sync</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
-    <servlet-name>app.device</servlet-name>
-    <url-pattern>/attendance/app/device</url-pattern>
+    <servlet-name>app.teach.attendance.device</servlet-name>
+    <url-pattern>/teach/attendance/device</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.signin</servlet-name>
-    <url-pattern>/attendance/app/signin</url-pattern>
+    <servlet-name>app.teach.attendance.signin</servlet-name>
+    <url-pattern>/teach/attendance/signin</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
-    <servlet-name>app.activity</servlet-name>
-    <url-pattern>/attendance/app/activity</url-pattern>
+    <servlet-name>app.teach.attendance.activity</servlet-name>
+    <url-pattern>/teach/attendance/activity</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.coursetable</servlet-name>
-    <url-pattern>/attendance/app/coursetable</url-pattern>
+    <servlet-name>app.teach.attendance.coursetable</servlet-name>
+    <url-pattern>/teach/attendance/coursetable</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.upload</servlet-name>
-    <url-pattern>/attendance/app/upload</url-pattern>
+    <servlet-name>app.teach.attendance.upload</servlet-name>
+    <url-pattern>/teach/attendance/upload</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.detail</servlet-name>
-    <url-pattern>/attendance/app/detail</url-pattern>
+    <servlet-name>app.teach.attendance.detail</servlet-name>
+    <url-pattern>/teach/attendance/detail</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.rate</servlet-name>
-    <url-pattern>/attendance/app/rate</url-pattern>
+    <servlet-name>app.teach.attendance.rate</servlet-name>
+    <url-pattern>/teach/attendance/rate</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.notice</servlet-name>
-    <url-pattern>/attendance/app/notice</url-pattern>
+    <servlet-name>app.teach.attendance.notice</servlet-name>
+    <url-pattern>/teach/attendance/notice</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>app.importer</servlet-name>
-    <url-pattern>/attendance/app/importer</url-pattern>
+    <servlet-name>app.teach.attendance.importer</servlet-name>
+    <url-pattern>/teach/attendance/importer</url-pattern>
   </servlet-mapping>
 </web-app>
