--- a/attendance/app/src/main/webapp/WEB-INF/web.xml
+++ b/attendance/app/src/main/webapp/WEB-INF/web.xml
@@ -118,4 +118,54 @@
     <servlet-name>app.teach.attendance.importer</servlet-name>
     <url-pattern>/teach/attendance/importer</url-pattern>
   </servlet-mapping>
+  <!--临时为考勤机器准备-->
+    <servlet-mapping>
+    <servlet-name>app.teach.attendance.sync</servlet-name>
+    <url-pattern>/attendance/app/sync</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.device</servlet-name>
+    <url-pattern>/attendance/app/device</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.signin</servlet-name>
+    <url-pattern>/attendance/app/signin</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.activity</servlet-name>
+    <url-pattern>/attendance/app/activity</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.coursetable</servlet-name>
+    <url-pattern>/attendance/app/coursetable</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.upload</servlet-name>
+    <url-pattern>/attendance/app/upload</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.detail</servlet-name>
+    <url-pattern>/attendance/app/detail</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.rate</servlet-name>
+    <url-pattern>/attendance/app/rate</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.notice</servlet-name>
+    <url-pattern>/attendance/app/notice</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>app.teach.attendance.importer</servlet-name>
+    <url-pattern>/attendance/app/importer</url-pattern>
+  </servlet-mapping>
 </web-app>
