add sign data cache service

--- a/attendance/app/src/main/resources/config.properties
+++ b/attendance/app/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 courseURL=http://portal.shfc.edu.cn/eams/courseTablePublic.do?method=courseTable&calendar.id=${semesterId}&ids=${roomId}&setting.ignoreTask=1&setting.kind=room&request_locale=zh_CN&ignoreHead=true
-
+#\u6700\u5927\u8FDF\u5230\u5206\u949F
+lateMax=15
