--- a/attendance/pom.xml
+++ b/attendance/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp.ws.services.teach</groupId>
     <artifactId>openurp-ws-services-teach-parent</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>openurp-ws-services-teach-attendance</artifactId>
   <packaging>jar</packaging>
